k8s/paperless/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
spec:
  tls:
    - hosts:
        - paperless.manujkarki.com.np
      secretName: apps-certificate-secret
  rules:
    - host: paperless.manujkarki.com.np
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless
                port:
                  number: 8000
